--- a/_publications/2022-03-30-paper-HSP.md
+++ b/_publications/2022-03-30-paper-HSP.md
@@ -1,7 +1,7 @@
 ---
 title: "The High Separation Probability Assumption for Semi-Supervised Learning"
 name: "HSP"
-authors: "Gao Huang, **Chaoqun Du**"
+authors: "Gao Huang, **Chaoqun Du (Student First Author)**"
 #author_notes: ""
 collection: publications
 permalink: /publication/2022-03-30-paper-HSP
